--- a/index.html
+++ b/index.html
@@ -1,29 +1,37 @@
 <!doctype html>
+<!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+<!--[if lt IE 9]>
+<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
 
 <html lang="en">
 <head>
   <meta charset="utf-8">
 
   <title>Sparkfaire</title>
-  <meta name="description" content="Sparkefaire is a celebration of invention.">
+  <meta name="description" content="Sparkefaire is where we come together to create and launch the cutting-edge.">
   <meta name="author" content="Mica Cardillo">
+  
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 
   <link rel="stylesheet" href="css/styles.css">
 
-  <!--[if lt IE 9]>
-  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
+
+  
 </head>
 
 <body>
 
-<div id="splash">
-
-	<img id="spark" src="images/background.jpg" alt="Sparkfaire 2014. Mark your calendar now!">
-
+<div id="container">
+	<img id="spark" src="images/background.jpg" alt="Sparkfaire 2014. Mark your calendar now!"><br />
+	<a id="none">sparkfaire</a>
 </div>
-
-  <script src="js/scripts.js"></script>
   
 </body>
+
+<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script type="text/javascript" src="js/scripts.js"></script>
 </html>
